Convert Context to junit5 #1057
Task-Url: https://github.com/eclipse-mylyn/org.eclipse.mylyn/issues/issues/1057